--- a/Src/Agat1App/View/Web.config
+++ b/Src/Agat1App/View/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="AgatDb" connectionString="Data Source=.;Initial Catalog=Agat_1;Integrated security=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="AgatDb" connectionString="Data Source=.;Initial Catalog=Agat_1;Integrated security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -31,4 +31,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
