--- a/Src/Agat1App/View/View.csproj
+++ b/Src/Agat1App/View/View.csproj
@@ -136,6 +136,8 @@
     <Compile Include="DataAccessLayer\Entities.cs" />
     <Compile Include="DataAccessLayer\IDataContext.cs" />
     <Compile Include="DataAccessLayer\IDataContextFactory.cs" />
+    <Compile Include="DataAccessLayer\IRequestRepository.cs" />
+    <Compile Include="DataAccessLayer\RequestsRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -145,6 +147,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\IUserRepository.cs" />
     <Compile Include="Service\IUserService.cs" />
+    <Compile Include="Service\RequestService.cs" />
     <Compile Include="Service\UserRepository.cs" />
     <Compile Include="Service\UserService.cs" />
     <Compile Include="ViewModels\AddressViewModel.cs" />
