--- a/Src/Agat1App/View/View.csproj
+++ b/Src/Agat1App/View/View.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Models\Request.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IRequestService.cs" />
     <Compile Include="Service\IUserRepository.cs" />
     <Compile Include="Service\IUserService.cs" />
     <Compile Include="Service\RequestService.cs" />
@@ -152,7 +153,9 @@
     <Compile Include="Service\UserService.cs" />
     <Compile Include="ViewModels\AddressViewModel.cs" />
     <Compile Include="ViewModels\AuthorViewModel.cs" />
+    <Compile Include="ViewModels\IHasUserCollection.cs" />
     <Compile Include="ViewModels\RequestCreateViewModel.cs" />
+    <Compile Include="ViewModels\RequestUpdateViewModel.cs" />
     <Compile Include="ViewModels\RequestViewModel.cs" />
     <Compile Include="ViewModels\UserListViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
@@ -166,6 +169,7 @@
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\Request\Index.cshtml" />
     <Content Include="Views\Request\Create.cshtml" />
+    <Content Include="Views\Request\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
